log
Thu Mar 17 12:45:31 HSP 2022: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e938a1e
Thu Mar 17 12:49:28 HSP 2022: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e78a2d5
Thu Mar 17 12:49:55 HSP 2022: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
04ff23c
Thu Mar 17 12:50:08 HSP 2022: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8f46263
Thu Mar 17 12:51:37 HSP 2022: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ca9447a
Thu Mar 17 12:51:53 HSP 2022: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
036e97a
Thu Mar 17 12:51:55 HSP 2022: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7302fc5
Thu Mar 17 12:52:35 HSP 2022: 
 tests:  0|6
total_score: 0/70
157d216
Thu Mar 17 12:53:48 HSP 2022: 
 list.c | 57 ++++++++++++++++++++++++++++++++++++++++-----------------
 1 file changed, 40 insertions(+), 17 deletions(-)
 tests:  1|5
total_score: 10/70
7b4fee9
Thu Mar 17 13:48:08 HSP 2022: 
 list.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  1|2
   [ INFO ] Insertando 99 a la lista (pushfront)
e916efd
Thu Mar 17 13:48:40 HSP 2022: 
 list.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  1|5
total_score: 10/70
bffc690
Thu Mar 17 13:49:50 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6e0281f
Thu Mar 17 13:50:51 HSP 2022: 
 list.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  1|5
total_score: 10/70
ffafb1f
Thu Mar 17 13:52:51 HSP 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f3732e1
Thu Mar 17 13:55:30 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
02dd757
Thu Mar 17 13:56:21 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'firstList':
list.c:46:16: error: 'list' is a pointer; did you mean to use '->'?
     return list.current->data;
                ^
                ->
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
24e4f5b
Thu Mar 17 13:56:29 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a3ed7fa
Thu Mar 17 13:58:38 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8b0b87f
Thu Mar 17 15:03:47 HSP 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
744a060
Thu Mar 17 15:04:07 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8e03c88
Thu Mar 17 15:04:20 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
90a5c5f
Thu Mar 17 15:04:31 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5dcc46c
Thu Mar 17 15:04:51 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e695914
Thu Mar 17 15:05:29 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
76c8589
Thu Mar 17 15:06:02 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
be4d49d
Thu Mar 17 15:08:19 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
65e97ad
Thu Mar 17 15:15:48 HSP 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
3044641
Thu Mar 17 15:16:03 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0ba2a15
Thu Mar 17 15:16:45 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 10/70
c9ff549
Thu Mar 17 15:18:18 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
936696d
Thu Mar 17 15:26:16 HSP 2022: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 10/70
5753873
Thu Mar 17 15:26:34 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
cc117c4
Thu Mar 17 15:26:52 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7f7bac4
Thu Mar 17 15:30:37 HSP 2022: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'prevList':
list.c:69:11: error: unused variable 'tmp' [-Werror=unused-variable]
     Node* tmp;
           ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
6da33f4
Thu Mar 17 15:30:47 HSP 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
e396a7a
Thu Mar 17 15:31:03 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 10/70
8df7dbf
Thu Mar 17 15:31:45 HSP 2022: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|0
576f724
Thu Mar 17 15:33:59 HSP 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
96bfb3e
Thu Mar 17 15:34:49 HSP 2022: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
f861c79
Thu Mar 17 15:40:28 HSP 2022: 
 list.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  0|0
6b84ef1
Thu Mar 17 15:43:28 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|0
   [ INFO ] llamando a firstList
a4e936d
Thu Mar 17 15:44:00 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|0
   [ INFO ] llamando a firstList
280c2dc
Thu Mar 17 15:44:40 HSP 2022: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
e270600
Thu Mar 17 15:46:21 HSP 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
47aaa64
Thu Mar 17 15:48:22 HSP 2022: 
 list.c | 20 ++++++++------------
 1 file changed, 8 insertions(+), 12 deletions(-)
In file included from test.c:5:
list.c: In function 'firstList':
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'nextList':
list.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'lastList':
list.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'prevList':
list.c:77:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
7461c87
Thu Mar 17 15:49:06 HSP 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c: In function 'firstList':
list.c:50:5: error: 'return' with no value, in function returning non-void [-Werror]
     return;
     ^~~~~~
list.c:43:7: note: declared here
 void* firstList(List* list)
       ^~~~~~~~~
list.c: In function 'nextList':
list.c:60:5: error: 'return' with no value, in function returning non-void [-Werror]
     return;
     ^~~~~~
list.c:53:7: note: declared here
 void* nextList(List* list)
       ^~~~~~~~
list.c: In function 'lastList':
list.c:70:5: error: 'return' with no value, in function returning non-void [-Werror]
     return;
     ^~~~~~
list.c:63:7: note: declared here
 void* lastList(List* list)
       ^~~~~~~~
list.c: In function 'prevList':
list.c:80:5: error: 'return' with no value, in function returning non-void [-Werror]
     return;
     ^~~~~~
list.c:73:7: note: declared here
 void* prevList(List* list)
       ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8dcdc36
Thu Mar 17 15:49:30 HSP 2022: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
e00ceb8
Thu Mar 17 15:54:57 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
239ddd6
Thu Mar 17 15:58:14 HSP 2022: 
 list.c | 17 ++---------------
 1 file changed, 2 insertions(+), 15 deletions(-)
 tests:  0|0
d557330
Thu Mar 17 15:59:19 HSP 2022: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|0
82519f7
Thu Mar 17 15:59:56 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|0
   [ INFO ] llamando a firstList
0fa3b26
Thu Mar 17 16:00:50 HSP 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
9ffed8d
Thu Mar 17 16:01:03 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
463d5be
Thu Mar 17 16:01:27 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1d5d965
Thu Mar 17 16:02:05 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b51db06
